# developtools_hapsigner

./: .gitattributes  .gitignore  BUILD.gn  NOTICE  OAT.xml  README.en.md  README.md  README_ZH.md  README_en.md
binary_sign_tool/codesigning/: signature_tools_codesigning.gni
binary_sign_tool/codesigning/fsverity/include/: fs_verity_descriptor.h  fs_verity_descriptor_with_sign.h  fs_verity_digest.h  fs_verity_generator.h  fs_verity_hash_algorithm.h  merkle_tree.h  merkle_tree_builder.h  thread_pool.h
binary_sign_tool/codesigning/fsverity/src/: fs_verity_descriptor.cpp  fs_verity_generator.cpp  merkle_tree_builder.cpp
binary_sign_tool/codesigning/sign/include/: bc_signeddata_generator.h  code_signing.h  signeddata_generator.h
binary_sign_tool/codesigning/sign/src/: code_signing.cpp
hapsigntool_cpp/test/unittest/: BUILD.gn  ohos_test.xml
hapsigntool_cpp/test/unittest/elfVerify/: hap_utils_test.cpp  sign_block_info_test.cpp  verify_bin_test.cpp  verify_elf_test.cpp
hapsigntool_cpp/test/unittest/generateCA/: generate_ca_test.cpp  generate_general_ca_test.cpp  generate_sub_ca_test.cpp
hapsigntool_cpp/test/unittest/generateKeyPair/: generate_keypair_test.cpp  hap_sign_cmd_test.cpp  hap_sign_tool_test.cpp  options_test.cpp  process_cmd_expansion_test.cpp  process_cmd_test.cpp
hapsigntool_cpp/test/unittest/hapSign/: hap_openssl_utils_test.cpp  hap_openssl_utils_test.h  hap_sign_test.cpp  hw_sign_head_test.cpp  sign_bin_test.cpp  sign_block_data_test.cpp  sign_elf_test.cpp  sign_provider_test.cpp
hapsigntool_cpp/test/unittest/hapVerify/: hap_cert_verify_openssl_utils_test.cpp  hap_signer_block_utils_test.cpp  hap_verify_result_test.h  hap_verify_test.cpp  provision_verify_test.cpp  random_access_file_test.cpp
hapsigntool_cpp/test/unittest/remoteSigner/: remote_signer_test.cpp
hapsigntool_cpp/test/unittest/signProfile/: pkcs7_data_test.cpp  profile_test.cpp  provision_test.cpp  sign_profile_test.cpp
hapsigntool_cpp/test/unittest/utils/: byte_array_utils_test.cpp  file_utils_test.cpp
hapsigntool_cpp/test/unittest/zip/: random_access_file_input_output_test.cpp  zip_signer_test.cpp
hapsigntool_cpp_test/: BUILD.gn
hapsigntool_cpp_test/fuzztest/: BUILD.gn
hapsigntool_cpp_test/fuzztest/codesigning/codesigning_fuzzer/: BUILD.gn  codesigning_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca001_fuzzer/: BUILD.gn  generateca001_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca002_fuzzer/: BUILD.gn  generateca002_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca003_fuzzer/: BUILD.gn
hapsigntool_cpp_test/fuzztest/generate_ca/generateca004_fuzzer/: BUILD.gn  generateca004_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca005_fuzzer/: BUILD.gn  generateca005_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca006_fuzzer/: BUILD.gn  generateca006_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca007_fuzzer/: BUILD.gn  generateca007_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca008_fuzzer/: BUILD.gn  generateca008_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca009_fuzzer/: BUILD.gn  generateca009_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca010_fuzzer/: BUILD.gn  generateca010_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca011_fuzzer/: BUILD.gn  generateca011_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca012_fuzzer/: generateca012_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_ca/generateca016_fuzzer/: generateca016_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/generate_csr/generatecsr001_fuzzer/: BUILD.gn  generatecsr001_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/hapresign/: BUILD.gn
hapsigntool_cpp_test/fuzztest/hapresign/hapresign_fuzzer/: BUILD.gn  hapresign_fuzzer.cpp  project.xml
hapsigntool_cpp_test/fuzztest/hapsign/hapsign001_fuzzer/: BUILD.gn  hapsign001_fuzzer.cpp
hapsigntool_cpp_test/fuzztest/permSign/: BUILD.gn
hapsigntool_cpp_test/fuzztest/permSign/permsign_fuzzer/: BUILD.gn  permsign_fuzzer.cpp  permsign_fuzzer.h
hapsigntool_cpp_test/fuzztest/process_cmd/processcmd001_fuzzer/: BUILD.gn
hapsigntool_cpp_test/fuzztest/process_cmd/processcmd002_fuzzer/: BUILD.gn
hapsigntool_cpp_test/fuzztest/profile/: profile_resources.h
hapsigntool_cpp_test/fuzztest/resource/: ohos_test.xml
hapsigntool_cpp_test/unittest/: BUILD.gn  ohos_test.xml
hapsigntool_cpp_test/unittest/elfVerify/: sign_block_info_test.cpp  sign_content_info_test.cpp  signature_block_types_test.cpp  signing_block_test.cpp  verify_elf_test.cpp
hapsigntool_cpp_test/unittest/generateCA/: generate_ca_test.cpp  generate_general_ca_test.cpp  generate_sub_ca_test.cpp
hapsigntool_cpp_test/unittest/generateCsr/: generate_csr_test.cpp
hapsigntool_cpp_test/unittest/generateKeyPair/: generate_keypair_test.cpp  hap_sign_cmd_test.cpp  hap_sign_tool_test.cpp  options_test.cpp
hapsigntool_cpp_test/unittest/hapReSign/: hap_resign_test.cpp  hap_resign_test.h
hapsigntool_cpp_test/unittest/hapSign/: block_data_test.cpp  block_head_test.cpp  hap_openssl_utils_test.cpp  hap_sign_test.cpp  hw_block_data_test.cpp  hw_block_head_test.cpp  hw_sign_head_test.cpp  sign_block_data_test.cpp  sign_elf_test.cpp
hapsigntool_cpp_test/unittest/hapVerify/: hap_cert_verify_openssl_utils_test.cpp  hap_signer_block_utils_test.cpp  hap_verify_test.cpp  provision_verify_test.cpp  random_access_file_test.cpp
hapsigntool_cpp_test/unittest/permSign/: perm_sign_test.cpp  perm_sign_test.h
hapsigntool_cpp_test/unittest/signProfile/: pkcs7_data_test.cpp  profile_test.cpp  provision_test.cpp  sign_profile_test.cpp
hapsigntool_cpp_test/unittest/utils/: byte_array_utils_test.cpp  cert_tools_test.cpp  file_utils_test.cpp
hapsigntool_cpp_test/unittest/zip/: zip_signer_test.cpp
pc/services/hap/: signature_tools_hap.gni
pc/services/utils/: signature_tools_utils.gni
pc/test/: BUILD.gn
pc/test/fuzztest/: BUILD.gn  ohos_test.xml
pc/test/packetUtils/: packet_helper.cpp
pc/test/unittest/: BUILD.gn  ohos_test.xml
(+1481 files in other folders)
