# Copyright (c) 2024-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("../../signature_tools.gni")

module_out_path = "developtools/hapsigner/hapsigner_pc"

ohos_unittest("hapsigntool_pc_unittest") {
  testonly = true
  module_out_path = module_out_path
  resource_config_file = "ohos_test.xml"

  configs = [ "${signature_tools_test}:service_include" ]

  sources = [
    "./hapVerify/hap_signer_block_utils_test.cpp",
    "./hapVerify/hap_verify_result_test.cpp",
    "./hapVerify/hap_verify_test.cpp",
    "./hapVerify/packets/hap_verify_v2.cpp",
    "./hapVerify/packets/hap_verify_v3.cpp",
    "./hapVerify/packets/packet_hap_integrity_error.cpp",
    "./hapVerify/provision_verify_test.cpp",
    "./hapVerify/random_access_file_test.cpp",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  deps = [ "${signature_tools_test}:service_target" ]

  install_images = [ "system" ]
  install_enable = true
  part_name = "hapsigner"
  subsystem_name = "developtools"
}
