# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//developtools/hapsigner/pc/signature_tools.gni")
signature_tools_utils_include = [
     "${signature_tools_service_utils}/include",
]

signature_tools_utils_src = [
    "${signature_tools_service_utils}/src/cert_dn_utils.cpp",
    "${signature_tools_service_utils}/src/cert_verify_openssl_utils.cpp",
    "${signature_tools_service_utils}/src/file_utils.cpp",
    "${signature_tools_service_utils}/src/key_store_helper.cpp",
    "${signature_tools_service_utils}/src/signing_block_utils.cpp",
    "${signature_tools_service_utils}/src/string_utils.cpp",
    "${signature_tools_service_utils}/src/verify_openssl_utils.cpp",
]
