# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("generate_csr_fuzztest") {
  testonly = true
  deps = [
    "./generatecsr_001_fuzzer:GenerateCsr001",
    "./generatecsr_002_fuzzer:GenerateCsr002",
    "./generatecsr_003_fuzzer:GenerateCsr003",
    "./generatecsr_004_fuzzer:GenerateCsr004",
    "./generatecsr_005_fuzzer:GenerateCsr005",
    "./generatecsr_006_fuzzer:GenerateCsr006",
    "./generatecsr_007_fuzzer:GenerateCsr007",
    "./generatecsr_008_fuzzer:GenerateCsr008",
    "./generatecsr_009_fuzzer:GenerateCsr009",
    "./generatecsr_010_fuzzer:GenerateCsr010",
    "./generatecsr_011_fuzzer:GenerateCsr011",
    "./generatecsr_012_fuzzer:GenerateCsr012",
  ]
}